activated post featured images and included posts in masonry gallery overview

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Touchfolio
+Theme Name: Touchfolio Clone
 Theme URI: http://dimsemenov.com/themes/touchfolio/
 Description: Fast and simple portfolio theme for creative people
 Author: Dmitry Semenov
